# sush.sh

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REQUIREMENTS.md  ROADMAP.md  TASKS.md  cliff.toml  dist-workspace.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  README.zh.md  REQUIREMENTS.md  ROADMAP.md  v0.8-manual-test.md
docs/plans/: 2026-04-26-v0.7-dual-pane-sftp.md  2026-04-26-v0.7-recursive-transfer.md  2026-04-26-v0.7-remote-edit.md  2026-04-26-v0.7-resume-transfer.md  2026-04-26-v0.7-sftp-multiselect.md  2026-04-26-v0.7-transfer-queue-background.md
docs/requirements/: v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v1.0.md
docs/superpowers/plans/: 2026-04-20-v0.1-mvp.md  2026-04-21-main-focus.md  2026-04-24-embedded-terminal-mode.md  2026-04-24-v0.3-host-management.md  2026-04-24-v0.4-history-probe.md  2026-04-25-v0.5-folder-view.md  2026-04-25-v0.6-secure-storage.md  2026-04-25-v0.8-advanced-networking.md
docs/superpowers/specs/: 2026-04-24-embedded-terminal-mode-design.md  2026-04-24-v0.3-host-management-design.md  2026-04-24-v0.4-history-probe-design.md  2026-04-25-v0.5-folder-view-design.md  2026-04-25-v0.8-advanced-networking-design.md
src/: app.rs  main.rs
src/config/: history.rs  host.rs  mod.rs  secrets.rs  ssh_config.rs  store.rs
src/sftp/: client.rs  mod.rs  transfer.rs
src/ssh/: auth.rs  mod.rs  proxy_jump.rs  session.rs  terminal.rs
src/tui/: event.rs  mod.rs
src/tui/views/: edit_view.rs  folder_view.rs  forward_edit.rs  forwarding_view.rs  import_view.rs  main_view.rs  mod.rs  password_dialog.rs  sftp_view.rs  ssh_view.rs
src/tui/widgets/: confirm_dialog.rs  file_list.rs  host_list.rs  mod.rs  progress_bar.rs  search_input.rs  status_bar.rs  tag_editor.rs
src/tunnel/: client.rs  daemon.rs  forward.rs  ipc.rs  mod.rs
src/utils/: fuzzy.rs  mod.rs  open.rs
