[package]
name = "sushi"
version = "0.1.0"
edition = "2024"
description = "A lightweight TUI SSH + SFTP manager"
license = "MIT"
repository = "https://github.com/lichen/sush.sh"

[dependencies]
# 异步运行时
tokio = { version = "1.52", features = ["full"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# SSH + SFTP
russh = "0.60"
russh-sftp = "2.1"

# 模糊搜索
nucleo = "0.5"

# SSH Config 解析
ssh2-config = "0.7"

# 配置序列化
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

# 错误处理
anyhow = "1.0"

# 跨平台路径
dirs = "6.0"

# 主机 ID
uuid = { version = "1.23", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
