[package]
name = "sush"
version = "1.0.0"
edition = "2024"
description = "A lightweight TUI SSH + SFTP manager"
license = "MIT"
repository = "https://github.com/lichen/sush.sh"

[dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"

# SSH + SFTP
russh = "0.60"
russh-sftp = "2.1"
alacritty_terminal = "0.26"

# Fuzzy search
nucleo = "0.5"

# SSH config parsing
ssh2-config = "0.7"

# Config serialization
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
serde_json = "1.0"

# Transfer cancellation token
tokio-util = "0.7"

# Error handling
anyhow = "1.0"

# Datetime handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform paths
dirs = "6.0"

# Host ID
uuid = { version = "1.23", features = ["v4"] }

# System keyring
keyring = { version = "3.6.0", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }

# File watching
notify = "8.2"

# Temp files
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
